--- a/src/app/views/confirmation/confirmation.component.html
+++ b/src/app/views/confirmation/confirmation.component.html
@@ -1,11 +1,12 @@
 <div class="confirmation-container">
   <div *ngIf="type === 'job'" class="confirmation-item table text-center">
+    <a class="close-button" routerLink="/jobs/1"></a>
     <div class="table-row">
       <div class="table-cell">
-        <div><i class="fa fa-check fa-lg"></i></div>
+        <div class="item-icon"><i class="fa fa-check fa-5x" aria-hidden="true"></i></div>
         <div class="item-title">{{'user.apply.confirmation' | translate}}</div>
         <div class="item-content">{{'user.apply.confirmation.text' | translate}}</div>
-        <div class="button-container"><a class="button clickable" routerLink="/jobs/1">{{'user.apply.find_more' | translate}}</a></div>
+        <div class="button-container"><a class="btn-primary btn-large btn" routerLink="/jobs/1">{{'user.apply.find_more' | translate}}</a></div>
       </div>
     </div>
   </div>
