--- a/src/app/views/confirmation/confirmation.component.scss
+++ b/src/app/views/confirmation/confirmation.component.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables';
+@import '../../styles/buttons';
 
 .confirmation-container {
   width: 100%;
@@ -12,16 +13,28 @@
 
   .confirmation-item {
     height: 100%;
-    width: 85%;
+    width: 70%;
     margin: 0 auto;
 
-    .icon-ic-check2 {
-      font-size: 30px;
-      color: $color-blue-200;
+    .close-button {
+      position: fixed;
+      top: 0px;
+      right: 0px;
+      z-index: 100001;
+      margin: 30px;
+      color: white;
+      transform: scale(1.2);
+    }
+
+    .item-icon {
+      margin-bottom: 50px;
+      i {
+        color: $color-accent-main;
+      }
     }
 
     .item-title {
-      margin: 35px 0;
+      margin: 45px 0;
       font-size: $fs-xl;
       padding: 0 20px;
     }
@@ -32,13 +45,6 @@
 
     .button-container {
       margin: 30px 0;
-
-      .button {
-        font-size: $fs-l;
-        &:hover {
-          text-decoration: none;
-        }
-      }
     }
   }
 }
