--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -20,22 +20,29 @@
       <i class="fa fa-envelope fa-5x" aria-hidden="true"></i>
     </div>
 
-    <div class="material-group contact-input-container">
-      <input [(ngModel)]="name" placeholder="{{'contact.form.name' | translate}}" type="text" class="material-input">
-    </div>
+    <form [formGroup]="contactForm" (ngSubmit)="submitForm(contactForm.value)">
+      <div class="form-group material-group contact-input-container" [ngClass]="{'has-error':!contactForm.controls['name'].valid && contactForm.controls['name'].touched}">
+        <input class="form-control material-input" type="text" placeholder="{{'contact.form.name' | translate}}" [formControl]="contactForm.controls['name']">
 
-    <div class="material-group contact-input-container">
-      <input [(ngModel)]="email" placeholder="{{'contact.form.email' | translate}}" accept="" type="text" class="material-input">
-    </div>
+        <div *ngIf="contactForm.controls['name'].hasError('required') && contactForm.controls['name'].touched" class="alert alert-danger">{{'contact.form.name.validation' | translate}}</div>
+        <div *ngIf="contactForm.controls['name'].hasError('minlength') && contactForm.controls['name'].touched" class="alert alert-danger">Your name must be at least 2 characters long.</div>
+      </div>
+      <div class="form-group  material-group contact-input-container" [ngClass]="{'has-error':!contactForm.controls['email'].valid && contactForm.controls['email'].touched}">
+        <input class="form-control material-input" type="email" placeholder="{{'contact.form.email' | translate}}" [formControl]="contactForm.controls['email']">
 
-    <div class="material-group contact-input-container">
-      <input [(ngModel)]="message" placeholder="{{'contact.form.message' | translate}}" type="text" class="material-input">
-    </div>
+        <div *ngIf="contactForm.controls['email'].hasError('required') && contactForm.controls['email'].touched" class="alert alert-danger">{{'contact.form.email.validation' | translate}}</div>
+        <div *ngIf="contactForm.controls['email'].hasError('minlength') && contactForm.controls['email'].touched" class="alert alert-danger">Your email must be at least 6 characters long.</div>
+      </div>
+      <div class="form-group  material-group contact-input-container" [ngClass]="{'has-error':!contactForm.controls['message'].valid && contactForm.controls['message'].touched}">
+        <input class="form-control material-input" type="text" placeholder="{{'contact.form.message' | translate}}" [formControl]="contactForm.controls['message']">
 
-    <div class="contact-button-container">
-      <button class="btn-primary btn-medium btn" (click)="onContactButtonClick()">{{"common.submit" | translate}}</button>
-    </div>
-
+        <div *ngIf="contactForm.controls['message'].hasError('required') && contactForm.controls['message'].touched" class="alert alert-danger">{{'contact.form.message.validation' | translate}}.</div>
+        <div *ngIf="contactForm.controls['message'].hasError('minlength') && contactForm.controls['message'].touched" class="alert alert-danger">Your message must be at least 2 characters long.</div>
+      </div>
+      <div class="form-group contact-button-container">
+        <button type="submit" [disabled]="!contactForm.valid" class="btn-primary btn-medium btn" (click)="onContactButtonClick()">{{"common.submit" | translate}}</button>
+      </div>
+    </form>
   </div>
 
 </div>
