--- a/src/app/components/job-list-item/job-list-item.component.html
+++ b/src/app/components/job-list-item/job-list-item.component.html
@@ -1,7 +1,7 @@
 <div class="job-list-container" (click)="onListItemClick()">
-  <p class="job-list-container-header">{{job.name}}</p>
+  <p class="job-list-container-header"><translation-item [text]="job.name" [translation]="job.translated.name"></translation-item></p>
   <p class="adress-field" >
-    <i class="fa fa-map-marker" aria-hidden="true"></i> {{job.adress}}
+    <i class="fa fa-map-marker" aria-hidden="true"></i> {{job.address}}
   </p>
 
   <div class="row">
