--- a/src/app/components/my-jobs-item/my-jobs-item.component.html
+++ b/src/app/components/my-jobs-item/my-jobs-item.component.html
@@ -4,7 +4,7 @@
     <span>{{job.jobDate | date: "dd"}}</span>
   </div>
   <div>
-    <h3>{{job.name}}</h3>
+      <h3><translation-item [text]="job.name" [translation]="job.translated.name"></translation-item></h3>
 
     <section *ngIf="isCompanyUser">
       <p *ngIf="section == 'current'">{{'assignment.status.user_application.will_perform' | translate:{'candidate_name': job.jobUsers[0].user.firstName} }}</p>
@@ -14,8 +14,6 @@
       <p *ngIf="section == 'waiting'">
         <em>{{'assignment.status.you_hired' | translate}} {{job.jobUsers[0].user.firstName}} {{job.users[0].user.lastName}}</em>
       </p>
-
-      <!--<p *ngIf="section == 'waiting'"><span class="stars">&#9734;&#9734;&#9734;&#9734;&#9734;</span></p>-->
 
       <p *ngIf="section == 'history'">
         <em>{{'assignment.status.you_hired' | translate}} {{job.jobUsers[0].user.firstName}} {{job.jobUsers[0].user.lastName}}</em>
