--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -1,7 +1,9 @@
 <div class="slider" (window:resize)="onResize()">
   <div class="slider-container" (swipeleft)="onSwipe(true)" (swiperight)="onSwipe(false)">
       <div *ngFor="let job of jobs" class="item-container clickable" [routerLink]="['/job', job.id]">
-        <div class="job-name"><div>{{(job.translated && job.translated.name) || job.name | slice:0:35}}{{(job.translated && job.translated.name.length > 35) || job.name.length > 35 ? '...' : ''}}</div></div>
+        <div class="job-name"><div>
+          <translation-item [text]="job.name" [translation]="job.translated.name" [short]="true" [length]="35"></translation-item>
+        </div></div>
         <div class="salary-container">{{job.hourlyPay.grossSalary * job.hours}} {{job.hourlyPay.currency}}</div>
       </div>
   </div>
