--- a/src/app/views/faq/faq.component.html
+++ b/src/app/views/faq/faq.component.html
@@ -15,8 +15,8 @@
         <li *ngFor="let faq of faqs">
           <input type="checkbox" checked>
           <i></i>
-          <strong>{{faq.translatedQuestion || faq.question}}</strong>
-          <p>{{faq.translatedAnswer || faq.answer}}</p>
+          <strong><translation-item [text]="faq.question" [translation]="faq.translated.question"></translation-item></strong>
+          <p><translation-item [text]="faq.answer" [translation]="faq.translated.answer"></translation-item></p>
         </li>
       </ul>
     </div>
