--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -21,7 +21,9 @@
     </div>
     <div class="col-xs-12 jobs-slider">
       <div *ngFor="let job of newJobs" class="item-container clickable" [routerLink]="['/job', job.id]">
-        <div class="job-name"><div>{{(job.translated && job.translated.name) || job.name | slice:0:35}}{{(job.translated && job.translated.name.length > 35) || job.name.length > 35 ? '...' : ''}}</div></div>
+        <div class="job-name"><div>
+          <translation-item [text]="job.name" [translation]="job.translated.name" [short]="true" [length]="35"></translation-item>
+        </div></div>
         <div class="salary-container">
           {{job.hourlyPay.grossSalary * job.hours}} {{job.hourlyPay.currency}}
         </div>
