Copy variable fix

--- a/src/app/views/confirmation/confirmation.component.html
+++ b/src/app/views/confirmation/confirmation.component.html
@@ -39,7 +39,7 @@
         <div class="item-icon"><i class="fa fa-check fa-5x" aria-hidden="true"></i></div>
         <div class="item-title">{{'profile.created.assignment.pending.email.titel' | translate}}</div>
         <div class="item-content">{{'profile.create.confirmation.description' | translate}}</div>
-        <div class="button-container"><a class="btn-primary btn-large btn" routerLink="/jobs/1">{{'auser.apply.find_more' | translate}}</a></div>
+        <div class="button-container"><a class="btn-primary btn-large btn" routerLink="/jobs/1">{{'user.apply.find_more' | translate}}</a></div>
       </div>
     </div>
   </div>
