Bugfix: Translation-item does now render html-snippets properly

--- a/src/app/components/translation-item/translation-item.component.html
+++ b/src/app/components/translation-item/translation-item.component.html
@@ -1,5 +1,5 @@
 <span class="translation-item">
-  <span class="text" *ngIf="isTranslationHidden">{{text}} </span>
-  <span class="translation" *ngIf="!isTranslationHidden">{{translation}}</span>
+  <span class="text" *ngIf="isTranslationHidden" [innerHTML]="text"></span>
+  <span class="translation" *ngIf="!isTranslationHidden" [innerHTML]="translation"></span>
   <i class="fa fa-language" *ngIf="isTranslationAvailable" data-toggle="tooltip" title="{{ 'common.translate' | translate}}" (click)="toggleTranslation($event)" aria-hidden="true"></i>
 </span>
