Cookie bar implemented.
Had to put the cookie bar below the navbar since the navbar is sticky to top and the content is adjusted to the height of the navbar.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -106,6 +106,7 @@
   </div>
 </div>
 <section class="app-content-container">
+  <cookie-bar></cookie-bar>
   <router-outlet></router-outlet>
 </section>
 <footer class="container-fluid footer">
