--- a/src/app/views/cookies-about/cookies-about.component.html
+++ b/src/app/views/cookies-about/cookies-about.component.html
@@ -10,7 +10,7 @@
   </div>
 
   <div class="cookies-about-container row">
-    <p>{{ 'cookies.info.description' | translate}}</p>
+    <p class="fs-m0">{{ 'cookies.info.description' | translate}}</p>
   </div>
 
 </div>
