--- a/src/app/views/forgot-password/forgot-password.component.scss
+++ b/src/app/views/forgot-password/forgot-password.component.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables';
 @import '../../styles/buttons';
 
-.login-header {
+.forgot-password-header {
   background-color: $color-primary-cerise;
   padding: 1em 0;
 
@@ -13,19 +13,19 @@
 
 }
 
-.login-form-container {
+.forgot-password-form-container {
   background-color: $default-bg-color;
   margin-right: -15px;
   margin-left: -15px;
   padding-top: 50px;
 
-  .login-input-container {
+  .forgot-password-input-container {
     max-width: 500px;
     margin: 0 auto;
     padding-bottom: 1.5em;
   }
 
-  .login-button-container {
+  .forgot-password-button-container {
     max-width: 500px;
     margin: 0 auto;
     padding-bottom: 1.5em;
