--- a/src/app/styles/typography.scss
+++ b/src/app/styles/typography.scss
@@ -57,7 +57,7 @@ h6 {
   font-weight: 700;
 }
 
-*, p {
+p {
   font-family: $default-font-family;
   font-size: 16px;
   line-height: 22px;
@@ -74,14 +74,6 @@ em {
   font-size: 24px;
   line-height: 36px;
   font-weight: 300;
-}
-
-.quote {
-  font-family: $default-font-family;
-  font-size: 24px;
-  line-height: 36px;
-  font-weight: 300;
-  font-style: italic;
 }
 
 .title-primary {
