--- a/src/app/views/contact/contact.component.scss
+++ b/src/app/views/contact/contact.component.scss
@@ -43,6 +43,13 @@
     width: 75%;
     margin: 0 auto;
     padding-bottom: 1.5em;
+    position: relative;
+
+    > textarea {
+      overflow: hidden;
+      word-wrap: break-word;
+      border-color: black;
+    }
   }
 
   .contact-button-container {
