Udate import order of css and refactor css code

--- a/src/app/styles/typography.scss
+++ b/src/app/styles/typography.scss
@@ -21,10 +21,11 @@
 // font stacks
 $museo:                "museo", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $default-font-family:  "Open Sans", sans-serif;
+$header-font-family:   $museo;
 
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $museo !important;
+  font-family: $header-font-family;
 }
 
 h1 {
