Small design tweak to registration page

--- a/src/app/views/user/user-register/user-register.component.html
+++ b/src/app/views/user/user-register/user-register.component.html
@@ -1,7 +1,7 @@
 <div class="user-register">
   <div class="subheader text-center">
-    <div class="fs-l form-group">{{'user.create.title' | translate | uppercase}}</div>
-    <div class="subheader-text">{{'user.create.description' | translate}}</div>
+    <h3>{{'user.create.title' | translate | uppercase}}</h3>
+    <div class="subheader-text fs-m0">{{'user.create.description' | translate}}</div>
   </div>
 
   <div class="centered-form-container">
