--- a/src/styles.scss
+++ b/src/styles.scss
@@ -108,8 +108,8 @@ body {
   }
 
   .subheader {
-    padding: 30px;
-    background: $color-secondary-gray;
+    padding: 40px;
+    background: $color-secondary-blue;
     color: white;
 
     .subheader-text {
