Add more padding to the partners section

--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -126,7 +126,7 @@
 .home-partners {
   text-align: center;
   background: $white;
-  padding: 2em;
+  padding: 5em 2em;
 
   .partners-logos-container {
     width: 100%;
