Refactor the museo font variable to variables.scss

--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -63,3 +63,6 @@ $default-bg-color: $white;
 
 // Borders
 $white-bg-border: $color-gray-50;
+
+//Fonts
+$museo:           "museo", "Helvetica Neue", Helvetica, Arial, sans-serif;
