--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables';
 
 .home-header {
-  background-color: $color-primary-cerise;
+  background: linear-gradient($color-cerise-700, $color-primary-cerise);
   text-align: center;
   padding: 3em;
   color: $white;
