--- a/src/app/views/jobs/jobs.component.scss
+++ b/src/app/views/jobs/jobs.component.scss
@@ -13,6 +13,13 @@
 
 }
 
+.map-container {
+  .map {
+    height: 300px;
+    width: 100%;
+  }
+}
+
 .job-list-container {
   background-color: $default-bg-color;
   > div {
