map marker info window on hover

--- a/src/app/components/job-list-item/job-list-item.component.html
+++ b/src/app/components/job-list-item/job-list-item.component.html
@@ -8,7 +8,7 @@
     <div class="col-xs-9">
       <span class="total-salary">{{job.amount}} {{job.hourlyPay.currency}}</span>
       <span class="salary-per-hour">
-        {{job.hours}}h ({{job.amount}} {{job.hourlyPay.currency}}/h)
+        {{job.hours}}h ({{job.hourlyPay.grossSalary}} {{job.hourlyPay.currency}}/h)
       </span>
     </div>
 
