--- a/src/app/views/jobs/jobs.component.scss
+++ b/src/app/views/jobs/jobs.component.scss
@@ -17,6 +17,24 @@
   .map {
     height: 300px;
     width: 100%;
+
+    .map-job-marker-info-header {
+      font-weight: bold;
+    }
+
+    .map-job-marker-info-adress-field {
+      color: $color-gray-400;
+    }
+
+    .map-job-marker-info-salary {
+      color: $color-primary-cerise;
+    }
+
+    .map-job-marker-info-salary-per-hour {
+      color: $color-gray-200;
+      text-align: right;
+      white-space: nowrap;
+    }
   }
 }
 
