--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import './app/styles/mixins';
 @import './app/styles/buttons';
 @import './app/styles/typography';
+@import './app/styles/tooltips';
 
 html, body {
     height: 100%;
