--- a/src/app/views/user/user-settings/user-settings.component.html
+++ b/src/app/views/user/user-settings/user-settings.component.html
@@ -1,26 +1,20 @@
-<div class="user-profile">
-  <div class="subheader text-center">
-    <div class="fs-l form-group">{{'profile' | translate | uppercase}}</div>
-    <div class="subheader-text form-group">{{'profile.create.description' | translate}}</div>
+<div class="user-profile-container">
+  <div class="user-profile-subheader-container">
+    <h2>{{'profile' | translate}}</h2>
+    <p>{{'profile.create.description' | translate}}</p>
 
-    <div class="table upload-group-container">
-      <div class="table-row">
-        <div class="table-cell upload-group">
-          <input type="file" id="image-filename" name="imageFilename" class="file" (change)="onImageFilenameChange($event)" accept="image/*">
-          <div class="icon-camera opacity-over" class="enabled">
-            <i class="demo-icon icon-ic-camera"></i>
-            <div class="fs-s text-center">{{'profile.form.photo.choose' | translate}}</div>
-          </div>
-
-          <div class="user-info-image" [ngStyle]="{'background-image': 'url(' + user.profileImage.imageUrl + ')'}"></div>
-        </div>
-        <div class="table-cell fs-m">{{user.firstName}} {{user.lastName}}</div>
+    <div class="user-profile-subheader-info-container">
+      <div class="user-profile-subheader-info-image-container">
+        <input type="file" id="image-filename" name="imageFilename" class="file" (change)="onImageFilenameChange($event)" accept="image/*">
+        <div *ngIf="!user.profileImage.imageUrl" class="icon-camera"><i class="fa fa-camera" aria-hidden="true"></i></div>
+        <div *ngIf="user.profileImage.imageUrl" class="user-info-image" [ngStyle]="{'background-image': 'url(' + user.profileImage.imageUrl + ')'}"></div>
       </div>
+      <div class="user-profile-subheader-info-name-container"><span>{{user.firstName}} {{user.lastName}}</span></div>
     </div>
   </div>
 
   <div class="row">
-    <div class="header-tab col-xs-6" [ngClass]="{'selected': selectedState == 'profile'}" (click)="setState('profile')" >
+    <div class="header-tab col-xs-6" [ngClass]="{'selected': selectedState == 'profile'}" (click)="setState('profile')">
       <h4>
         {{'profile' | translate}}
       </h4>
